Fixed text and button align

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,13 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  background: linear-gradient(111.03deg, rgba(19, 23, 128, 0.78) 0%, #8085FF 100%);
+  height: 100vh;
+}
+
+.DescriptionComponent {
+  color: #FFFF;
 }
